--- a/css_frameworks.html
+++ b/css_frameworks.html
@@ -14,7 +14,13 @@
         <nav>
           <div class="nav-wrapper">
             <a href="#" class="brand-logo">Intro to Materialize</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="sass.html">CSS</a></li>
+              <li><a href="badges.html">Frameworks</a></li>
+              <li><a href="collapsible.html">Rule</a></li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
               <li><a href="sass.html">CSS</a></li>
               <li><a href="badges.html">Frameworks</a></li>
               <li><a href="collapsible.html">Rule</a></li>
@@ -25,13 +31,49 @@
 
     <main>
       <div class="carousel">
-        <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+        <a class="carousel-item" href="#one!"><img src="https://www.besttours.com/media/catalog/category/NYC_2-compressor.jpg"></a>
         <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
         <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
         <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
         <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
       </div>
     </main>
+<div class="row container">
+    <div class="col s6">
+            <div class="col s12 m7">
+              <div class="card">
+                <div class="card-image">
+                  <img src="https://s-media-cache-ak0.pinimg.com/originals/3d/a7/1e/3da71e4375def2ff918519891babb463.png">
+                  <span class="card-title">Card Title</span>
+                </div>
+                <div class="card-content">
+                  <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                  <a href="#">This is a link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col s6">
+                    <div class="col s12 m7">
+                      <div class="card">
+                        <div class="card-image">
+                          <img src="https://s-media-cache-ak0.pinimg.com/originals/3d/a7/1e/3da71e4375def2ff918519891babb463.png">
+                          <span class="card-title">Card Title</span>
+                        </div>
+                        <div class="card-content">
+                          <p>I am a very simple card. I am good at containing small bits of information.
+                          I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                          <a href="#">This is a link</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
 
     <footer class="page-footer">
           <div class="container">
